--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,14 @@ flutter:
     - assets/images/mosalah.jpg
     - assets/images/download.png
     - assets/images/campnou.jpg
+    - assets/images/1.jpg
+    - assets/images/2.jpg
+    - assets/images/3.jpg
+    - assets/images/4.jpg
+    - assets/images/6.jpg
+    - assets/images/7.jpg
+    - assets/images/8.jpg
+    - assets/images/9.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
