--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  like_button: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +79,7 @@ flutter:
     - assets/images/3.jpg
     - assets/images/4.jpg
     - assets/images/6.jpg
+    - assets/images/news.jpg
     - assets/images/7.jpg
     - assets/images/8.jpg
     - assets/images/9.jpg
@@ -87,6 +89,10 @@ flutter:
     - assets/icons/Mail.svg
     - assets/icons/Lock.svg
     - assets/icons/Log out.svg
+    - assets/icons/news.svg
+    - assets/icons/soccor.svg
+
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
