--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,23 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
   like_button: ^2.0.4
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/download.png"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_svg: ^0.22.0
   http: ^0.13.4
+  
+
+
+  
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
