--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^3.3.5
   like_button: ^2.0.4
   flutter_launcher_icons: ^0.9.2
+  url_launcher: ^6.0.18
+  url_launcher_web: ^2.0.6
 
 flutter_icons:
   android: true
