--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   url_launcher: ^6.0.18
   url_launcher_web: ^2.0.6
+  image_picker: ^0.8.4+4
 
 flutter_icons:
   android: true
