--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^3.3.5
   like_button: ^2.0.4
   flutter_launcher_icons: ^0.9.2
+  get:
+  http: ^0.13.4
 
 flutter_icons:
   android: true
@@ -77,6 +79,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/images/
     - assets/images/ixpap-5.jpg
     - assets/images/bundesliga.png
     - assets/images/laliga.png
